--- a/admin_map.html
+++ b/admin_map.html
@@ -319,9 +319,6 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script>
-        // We'll add the JavaScript functionality in the next step
-        console.log('Hazard Zone Admin Panel Loaded');
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
